@@ -52,6 +52,8 @@ neu:
 - einige Geschwindigkeitsverbesserungen, Danke an Tobias Bratfisch für die Patches
 - falls die VPS-Zeit von der Startzeit einer Sendung abweicht, wird die VPS-Kennung nun mit
   'v' statt 'V' angezeigt.
+- Der erste Lauf der Hintergrund-Threads (Suchtimer, Umschalttimer, Konfliktprüfung) wird nun
+  durch den ersten Aufruf von cPlugin::MainThreadHook ausgelöst, anstatt 20s nach dem VDR-Start.
 
 fixes:
 - Absturz beim Drücken von 'Ok' in leerem Menü erledigter Timer behoben
